# knockout-whist

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
src/knockout_whist/ai/: game_ai.py
src/knockout_whist/models/: card.py  player.py  trick.py
src/knockout_whist/server/: debug_websocket.py  game_server.py
src/knockout_whist/static/: index.html
tests/: test_game.py
