[project]
name = "knockout-whist"
version = "0.1.0"
authors = [
  { name = "Tech4bueno", email = "164949278+tech4bueno@users.noreply.github.com" },
]
description = "A full-stack implementation of the card game 'Knockout Whist'"
requires-python = ">=3.9"
dependencies = [
    "websockets>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
knockout-whist = "knockout_whist.bin.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]

[tool.pytest.ini_options]
addopts = "--cov=knockout_whist --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["knockout_whist"]
omit = [
    "src/knockout_whist/server/debug_websocket.py",
    "*/__init__.py",
]
